# libpressio_jit

./: CMakeLists.txt  libpressio_jit.pc.in  libpressio_jitConfig.cmake.in
include/: libpressio_jit.h
include/libpressio_jit_ext/cpp/: generator.h
src/: libpressio_jit.cc  libpressio_jit_version.h.in
src/plugins/compressors/: poorjit.cc
src/plugins/generators/: generator_base.cc  template.cc
test/: CMakeLists.txt  test_libpressio_jit.cc
